{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c6a9abc0-b6e8-4718-be17-6021ba0a24b8",
            "actions": [
                {
                    "name": "ChangeMovementSystem",
                    "type": "Button",
                    "id": "afc023de-2603-47f3-807f-6153324c7005",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateReticle",
                    "type": "Value",
                    "id": "3929245d-507d-485e-9061-cf2e8e70e5b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlaceWalkway",
                    "type": "Button",
                    "id": "cc0d8f56-b5d9-47be-8a11-885757f0e6fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98a3c71a-fc85-4e10-ba67-16d54d5fb65e",
                    "path": "<XRController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMovementSystem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0b56525-5132-4719-9516-14e9048a0a09",
                    "path": "<WMRSpatialController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMovementSystem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d9b9b1c-f684-44e0-8a28-8eb8429d95ed",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMovementSystem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "4bab3323-f776-4de4-b321-ceadf0be385c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "RotateReticle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0daa4e62-c23d-4b48-ae60-3f33a2a6edd7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "RotateReticle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6ea5a335-992e-4664-ab5a-90663d2972d2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "RotateReticle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1898ba53-e2bb-49ff-9f1a-0f46ee733d8e",
                    "path": "<XRController>{LeftHand}/Primary2DAxis/x",
                    "interactions": "",
                    "processors": "Clamp(min=-1),Invert",
                    "groups": "Generic XR Controller",
                    "action": "RotateReticle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "098c0ddc-c587-4375-ad8e-45157c855e53",
                    "path": "<XRController>{LeftHand}/Primary2DAxis/x",
                    "interactions": "",
                    "processors": "Clamp(max=1)",
                    "groups": "Generic XR Controller",
                    "action": "RotateReticle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d0076279-4732-47b0-9686-12ed9bd8f80e",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceWalkway",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ff8bbdf-dc65-4493-8418-83f71c8bf5f7",
                    "path": "<WMRSpatialController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceWalkway",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "2f2f988d-8771-4d92-9a78-e2310b430f80",
            "actions": [
                {
                    "name": "RightGrip",
                    "type": "Button",
                    "id": "60a1a55b-5b5c-411d-8407-6da21873d684",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftGrip",
                    "type": "Button",
                    "id": "7043784d-5ebf-48fb-aafa-953939e342e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "85d72525-246d-4689-a70a-60931e3e0e48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "de656e48-a3ea-417c-b685-856351359dd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "385218f3-cba7-4824-85de-2af2c88396d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "06d92f40-b124-40b2-b5a9-bb05c69a5857",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "7d38566b-26dd-49a6-b45a-e8bfb18f5a0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "5558be86-4d30-4e94-af82-f44816845404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMenu",
                    "type": "Button",
                    "id": "eb3d5912-0134-4479-826e-41ca2b827bec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMenu",
                    "type": "Button",
                    "id": "0b9b7ca4-cff1-441c-9718-12ac94e9326a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightJoystickClick",
                    "type": "Button",
                    "id": "3bdd4be9-0f42-4d23-bc20-a40fdb52ef90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftJoystickClick",
                    "type": "Button",
                    "id": "0ce1e482-8e05-4dd1-a12c-65d9440e3bef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "2e809a47-37f1-4fac-9d81-f2be5f55e11d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eed5ae66-1fd5-42e4-b731-177bda719eed",
                    "path": "<WMRSpatialController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88334d4e-bd4c-40a8-9445-1fe70f8469a0",
                    "path": "<WMRSpatialController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4ca6987-4c5d-44a7-82a7-415f53edac31",
                    "path": "<WMRSpatialController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3431de1a-6809-4c0c-93f3-ce1a18df4af3",
                    "path": "<WMRSpatialController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cecfecb6-80d7-46b0-a740-36f6142c4e8c",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6796148-80dc-48b1-8bd1-d4319d400a45",
                    "path": "<WMRSpatialController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2be12d39-af2b-4eb7-98b5-916b56c873f1",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de2d53d-af35-4614-bced-e64766e20c4c",
                    "path": "<WMRSpatialController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1415f262-941e-4d6a-a5a1-677a7337f7db",
                    "path": "<WMRSpatialController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19b9b20c-135d-4d2f-94bd-a4d3c4829656",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e6cf3f2-5342-493b-8329-acd766a57798",
                    "path": "<WMRSpatialController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e42124cb-e617-4d8c-a549-14ade819c11a",
                    "path": "<WMRSpatialController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftJoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7d495f2-2b63-41e3-9e5d-478b48036a87",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftJoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2e6ca4d-7975-4688-930a-8fabfecbb103",
                    "path": "<WMRSpatialController>{LeftHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e87d56e8-a055-4953-9fd9-047b78f029eb",
                    "path": "<XRController>{LeftHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a90e9ad5-0657-4da3-84c1-8f24cc5826f2",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203a14ac-688e-49d8-a78e-2788304a81f2",
                    "path": "<XRController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b66d442c-14c1-4085-89d3-d38760e45a95",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "128e3259-08bf-4b34-83b1-13dca86cb62e",
                    "path": "<XRController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d284db7e-73ab-4e4d-91e9-93f19a2d60e9",
                    "path": "<XRController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9577622-d98f-493c-b886-167fdd1792fa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}